--- a/todo.txt
+++ b/todo.txt
@@ -43,4 +43,6 @@ TODO, which will get actually done
 
 - OpenTTD: Face selection dialog is too tall.
 
-- Debian noroot: audio support.
+- Debian noroot: audio support - implement PulseAudio server.
+
+- Debian noroot: Android printer support - implement CUPS using /var/run/cups/cups.sock.
