--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,8 @@ TODO, which will get actually done
 
 - TeeWorlds: navigate UI with gamepad.
 
+- TeeWorlds: control movement with gyroscope.
+
 - OpenArena: navigate game menu with analog joystick.
 
 - OpenArena: do not treat commands starting with / as chat text.
