--- a/todo.txt
+++ b/todo.txt
@@ -36,3 +36,5 @@ TODO, which will get actually done
 - OpenTTD: Togglable legend area for map window.
 
 - Nvidia Shield D-Pad does not send any events (probably acts as 3-rd joystick).
+
+- USB Keyboard: touchpad mode, configurable mouse speed, show keyboard LEDs, show error when root is not installed.
