--- a/todo.txt
+++ b/todo.txt
@@ -27,14 +27,10 @@ TODO, which will get actually done
 
 - Debian noroot: support multiple external storage locations.
 
-- Debian noroot: support Android intent x11://localhost:6000 - http://www.openintents.org/node/905 .
-
-- OpenTTD: cloud save support.
-
-- OpenTTD: Town window too tall.
-
-- OpenTTD: Togglable legend area for map window.
+- XSDL: support Android intent x11://localhost:6000 - http://www.openintents.org/node/905
 
 - Nvidia Shield D-Pad does not send any events (probably acts as 3-rd joystick).
 
 - USB Keyboard: touchpad mode, configurable mouse speed, show keyboard LEDs, show error when root is not installed.
+
+- S Planner Killer: options to restore calendar settiongs, and to kill lock-screen widget.
