--- a/todo.txt
+++ b/todo.txt
@@ -25,7 +25,7 @@ TODO, which will get actually done
 
 - XSDL: support Android intent x11://localhost:6000 - http://www.openintents.org/node/905
 
-- USB Keyboard: touchpad mode, configurable mouse speed, show keyboard LEDs, show error when root is not installed.
+- USB Keyboard: configurable mouse speed, show keyboard LEDs, redefine unknown keys.
 
 - S Planner Killer: options to restore calendar settiongs, and to kill lock-screen widget.
 
