--- a/todo.txt
+++ b/todo.txt
@@ -42,3 +42,5 @@ TODO, which will get actually done
 - GemRB: update.
 
 - OpenTTD: tutorial.
+
+- Add glshim library: https://github.com/lunixbochs/glshim
