--- a/todo.txt
+++ b/todo.txt
@@ -19,6 +19,8 @@ TODO, which will get actually done
 
 - TeeWorlds: show chat backlog in text input field.
 
+- TeeWorlds: do not jump if tapping lower part of the joystick.
+
 - OpenArena: navigate game menu with analog joystick.
 
 - OpenArena: do not treat commands starting with / as chat text.
@@ -35,7 +37,9 @@ TODO, which will get actually done
 
 - XSDL: support Android intent x11://localhost:6000 - http://www.openintents.org/node/905
 
-- USB Keyboard: configurable mouse speed, show keyboard LEDs, redefine unknown keys.
+- USB Keyboard: configurable mouse speed, show keyboard LEDs, redefine unknown keys, fix Lollipop SELinux bug.
+
+- Debian: fix Lollipop -fPIC.
 
 - S Planner Killer: options to restore calendar settiongs, and to kill lock-screen widget.
 
