Fixed Samsung multiwindow mode, apps can be started at any order now

--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -197,4 +197,6 @@
 
     <string name="google_play_game_services_app_id" translatable="false">==GOOGLEPLAYGAMESERVICES_APP_ID==</string>
 
+    <string name="restarting_please_wait">Restarting, please wait.</string>
+
 </resources>
