--- a/todo.txt
+++ b/todo.txt
@@ -36,3 +36,5 @@ TODO, which will get actually done
 - S Planner Killer: options to restore calendar settiongs, and to kill lock-screen widget.
 
 - OpenTTD: 24bpp color mode + 32bpp blitter in SDL menu.
+
+- OpenTTD: text input freezes OpenTTD and servers kick it.
