--- a/todo.txt
+++ b/todo.txt
@@ -38,3 +38,5 @@ TODO, which will get actually done
 - OpenTTD: 24bpp color mode + 32bpp blitter in SDL menu.
 
 - OpenTTD: text input freezes OpenTTD and servers kick it.
+
+- GIMP & Debian: update proot, update proot tmpdir patch to use env var PROOT_TMPDIR, update XSDL, update system images, set R9X as default XFWM4 theme.
