SDL: Tentative fix for buggy keyboards that send ASCII symbols without keysym

--- a/todo.txt
+++ b/todo.txt
@@ -39,4 +39,6 @@ TODO, which will get actually done
 
 - OpenTTD: text input freezes OpenTTD and servers kick it.
 
-- GIMP & Debian: update proot, update proot tmpdir patch to use env var PROOT_TMPDIR, update XSDL, update system images, set R9X as default XFWM4 theme.
+- GIMP & Debian: update proot, update proot tmpdir patch to use env var PROOT_TMPDIR.
+
+- GIMP & Debian: update XSDL, update system images, set R9X as default XFWM4 theme, recompile Inkscape to remove /dev/zero hack.
