--- a/todo.txt
+++ b/todo.txt
@@ -29,6 +29,8 @@ TODO, which will get actually done
 
 - SDL: CompatibilityHacksForceScreenUpdate=y does not redraw screen when invoking from background.
 
+- SDL: implement SDL_GL_LoadLibrary() / SDL_GL_GetProcAddress() / SDL_GL_SetAttribute() / SDL_GL_GetAttribute().
+
 - USB Keyboard: redefine unknown keys, add VLC server.
 
 - S Planner Killer: options to restore calendar settiongs, and to kill lock-screen widget.
