--- a/todo.txt
+++ b/todo.txt
@@ -43,6 +43,10 @@ TODO, which will get actually done
 
 - OpenTTD: 16bpp blitter uses 8bpp graphics, when 32bpp is available.
 
+- OpenTTD: Changing GUI zoom level resets button size.
+
+- OpenTTD: Cannot resize most dialogs.
+
 - GIMP & Debian: update proot, update proot tmpdir patch to use env var PROOT_TMPDIR.
 
 - GIMP & Debian: update XSDL, update system images, set R9X as default XFWM4 theme, recompile Inkscape to remove /dev/zero hack.
