--- a/todo.txt
+++ b/todo.txt
@@ -33,7 +33,7 @@ TODO, which will get actually done
 
 - SDL: implement SDL_GL_LoadLibrary() / SDL_GL_GetProcAddress() / SDL_GL_SetAttribute() / SDL_GL_GetAttribute().
 
-- S Planner Killer: options to restore calendar settiongs, and to kill lock-screen widget.
+- USB Keyboard: options for camera feed size and for redefining remote menu hotkey.
 
 - OpenTTD: 24bpp color mode + 32bpp blitter in SDL menu.
 
