--- a/todo.txt
+++ b/todo.txt
@@ -50,3 +50,5 @@ TODO, which will get actually done
 - XSDL: enable Ctrl/Alt/Shift and move them when mouse cursor is nearby.
 
 - SDL: add option for non-fullscreen non-immersive mode.
+
+- Debian and Gimp: fails to launch on Galaxy S6 and Note 4 with Android 5.0.2, Snapdragon variants.
