--- a/todo.txt
+++ b/todo.txt
@@ -52,3 +52,5 @@ TODO, which will get actually done
 - SDL: add option for non-fullscreen non-immersive mode.
 
 - Debian and Gimp: fails to launch on Galaxy S6 and Note 4 with Android 5.0.2, Snapdragon variants.
+
+- UQM HD: add fonts from http://mosc-portal.bursa.ru/showthread.php?t=206 and switch back to joystick controls, set 4:3 aspect ratio as default.
