--- a/todo.txt
+++ b/todo.txt
@@ -18,3 +18,5 @@ TODO, which will get actually done
 - SDL: add option for non-fullscreen non-immersive mode.
 
 - UQM HD: add fonts from http://mosc-portal.bursa.ru/showthread.php?t=206 and switch back to joystick controls, set 4:3 aspect ratio as default.
+
+- SDL: gyroscope calibration is broken.
