--- a/todo.txt
+++ b/todo.txt
@@ -20,3 +20,5 @@ TODO, which will get actually done
 - UQM HD: add fonts from http://mosc-portal.bursa.ru/showthread.php?t=206 and switch back to joystick controls, set 4:3 aspect ratio as default.
 
 - SDL: gyroscope calibration is broken.
+
+- SDL: additional option in config for choosing opengl mode: native or glshim.
