--- a/todo.txt
+++ b/todo.txt
@@ -3,15 +3,17 @@ TODO, which will get actually done
 
 - TeeWorlds: infinite loop while trying to enter chat text with gamepad.
 
-- TeeWorlds: navigate UI with gamepad.
+- TeeWorlds: navigate UI with gamepad, auto-switch to correct aiming mode when gamepad is used.
 
-- OpenArena: fix aiming angles jumping at random after the first zoom and after respawn.
+- TeeWorlds: aiming with gyroscope.
 
-- SDL: implement SDL_GL_LoadLibrary() / SDL_GL_GetProcAddress() / SDL_GL_SetAttribute() / SDL_GL_GetAttribute().
+- OpenArena: fix aiming angles jumping at random after the first zoom and after respawn, publish to Android TV.
 
-- SDL: CompatibilityHacksForceScreenUpdate=y does not redraw screen after putting to background and restoring.
+- OpenArena: fix VR mode, add settings for eye separation and focus angle.
 
-- USB Keyboard: options for camera feed size and for redefining remote menu hotkey, control mouse with gyroscope.
+- OpenArena: add dynamic camera/joystick, add option for joystick tap action.
+
+- USB Keyboard: options for camera feed size and for redefining remote menu hotkey.
 
 - OpenTTD: 24bpp color mode + 32bpp blitter in SDL menu.
 
@@ -19,10 +21,22 @@ TODO, which will get actually done
 
 - OpenTTD: Fix team chat with 6 or more players.
 
-- SDL: add option for non-fullscreen non-immersive mode.
+- OpenTTD: tap to confirm construciton, and hide all dialogs when constructing something.
 
 - UQM HD: add fonts from http://mosc-portal.bursa.ru/showthread.php?t=206 and switch back to joystick controls, set 4:3 aspect ratio as default.
 
-- SDL: gyroscope calibration is broken.
+- SDL: implement SDL_GL_LoadLibrary() / SDL_GL_GetProcAddress() / SDL_GL_SetAttribute() / SDL_GL_GetAttribute().
+
+- SDL: CompatibilityHacksForceScreenUpdate=y does not redraw screen after putting to background and restoring.
+
+- SDL: request SD card permission on Android 6.
+
+- SDL: add option for non-fullscreen non-immersive mode.
+
+- SDL: add option to remove border for Android TV.
 
 - Debian: proot crashes on Shield TV arm64 box.
+
+- Debian: add harldink simulation to proot, for Android 6.
+
+- Debian: add OpenSL ES output plugin to PulseAudio.
