SDL: option to disable TV borders

--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -157,6 +157,7 @@
     <string name="video_orientation_autodetect">Auto-detect screen orientation</string>
     <string name="video_bpp_24">24 bpp screen color depth</string>
     <string name="video_immersive">Hide system navigation buttons / immersive mode</string>
+    <string name="tv_borders">TV borders</string>
 
     <string name="text_edit_click_here">Tap to start typing, press Back when done</string>
 
