--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,7 @@ TODO, which will get actually done
 
 - TeeWorlds: aiming with gyroscope.
 
-- OpenArena: fix aiming angles jumping at random after the first zoom and after respawn, publish to Android TV.
+- OpenArena: publish to Android TV.
 
 - OpenArena: fix VR mode, add settings for eye separation and focus angle.
 
