--- a/todo.txt
+++ b/todo.txt
@@ -11,15 +11,9 @@ TODO, which will get actually done
 
 - OpenArena: add Google Play Games network support.
 
+- OpenArena: first-person mode camera sometimes looks down after respawn.
+
 - USB Keyboard: options for camera feed size and for redefining remote menu hotkey.
-
-- OpenTTD: 24bpp color mode + 32bpp blitter in SDL menu.
-
-- OpenTTD: station names truncated on high resolution.
-
-- OpenTTD: Fix team chat with 6 or more players.
-
-- OpenTTD: tap to confirm construciton, and hide all dialogs when constructing something.
 
 - UQM HD: add fonts from http://mosc-portal.bursa.ru/showthread.php?t=206 and switch back to joystick controls, set 4:3 aspect ratio as default.
 
