--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,7 @@ TODO, which will get actually done
 
 - TeeWorlds: navigate UI with gamepad, auto-switch to correct aiming mode when gamepad is used.
 
-- TeeWorlds: aiming with gyroscope.
+- TeeWorlds: tap-and-swipe controls.
 
 - OpenArena: add dynamic camera/joystick, add option for joystick tap action.
 
